--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Helm : Emacs incremental completion and selection narrowing framework">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Helm by emacs-helm</title>
+    <title>Helm</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>Helm</h1>
-        <h2>Emacs incremental completion and selection narrowing framework</h2>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/emacs-helm/helm">View on GitHub</a>
 
-        <section id="downloads">
-          <a href="https://github.com/emacs-helm/helm/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/emacs-helm/helm/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/emacs-helm/helm" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+          <h1 id="project_title">Helm</h1>
+          <h2 id="project_tagline">Emacs incremental completion and selection narrowing framework</h2>
 
-    <div class="container">
-      <section id="main_content">
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/emacs-helm/helm/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/emacs-helm/helm/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <pre><code> _____                            _   _      _
 | ____|_ __ ___   __ _  ___ ___  | | | | ___| |_ __ ___
 |  _| | '_ ` _ \ / _` |/ __/ __| | |_| |/ _ \ | '_ ` _ \
@@ -63,16 +66,16 @@ the trap of backward compatibility. </p>
 <li>
 <p>Clone the <code>helm</code> repository to some directory:</p>
 
-<pre lang="elisp"><code>$ git clone https://github.com/emacs-helm/helm.git /path/to/helm/directory
-</code></pre>
+<div class="highlight highlight-elisp"><pre><span class="nv">$</span> <span class="nv">git</span> <span class="nv">clone</span> <span class="nv">https://github.com/emacs-helm/helm.git</span> <span class="nv">/path/to/helm/directory</span>
+</pre></div>
 </li>
-<li><p>Run make from this directory.</p></li>
+<li><p>Run <code>make</code> from this directory.</p></li>
 <li>
 <p>Add to <code>.emacs.el</code> (or equivalent):</p>
 
-<pre lang="elisp"><code>(add-to-list 'load-path "/path/to/helm/directory")
-(require 'helm-config)
-</code></pre>
+<div class="highlight highlight-elisp"><pre><span class="p">(</span><span class="nv">add-to-list</span> <span class="ss">'load-path</span> <span class="s">"/path/to/helm/directory"</span><span class="p">)</span>
+<span class="p">(</span><span class="nb">require</span> <span class="ss">'helm-config</span><span class="p">)</span>
+</pre></div>
 </li>
 </ol><p>Alternatively, you can have a quick try to helm by launching from the helm directory:</p>
 
@@ -85,6 +88,11 @@ the trap of backward compatibility. </p>
 
 <p>Helm is now available on Melpa at <code>http://melpa.milkbox.net/</code>
 You will find there instructions to install.</p>
+
+<p><em>WARNING:</em> For any upgrade after Version 1.5.6 using package.el, you will have to remove all your helm*.elc files
+and recompile from a clean Emacs, expect failures if you don't do that.
+Users that are installing from git will not have this problem
+by recompiling their helm copy with "make".</p>
 
 <p><strong>Note to Linux Distributions Maintainers</strong></p>
 
@@ -111,15 +119,15 @@ Helm built-in and properly set-up.</p>
 <p>Just type <code>M-x helm-mini</code> and enjoy. You might want to bind that command to
 a keyboard shortcut. Here's a suggestion:</p>
 
-<pre lang="elisp"><code>(global-set-key (kbd "C-c h") 'helm-mini)
-</code></pre>
+<div class="highlight highlight-elisp"><pre><span class="p">(</span><span class="nv">global-set-key</span> <span class="p">(</span><span class="nv">kbd</span> <span class="s">"C-c h"</span><span class="p">)</span> <span class="ss">'helm-mini</span><span class="p">)</span>
+</pre></div>
 
 <p>You can also start with <code>M-x helm-mode</code> and enjoy helm completion in your favourites
 Emacs commands (e.g <code>M-x</code>, <code>C-x C-f</code>, etc...).
 You can enable this by adding in your init file:</p>
 
-<pre lang="elisp"><code>(helm-mode 1)
-</code></pre>
+<div class="highlight highlight-elisp"><pre><span class="p">(</span><span class="nv">helm-mode</span> <span class="mi">1</span><span class="p">)</span>
+</pre></div>
 
 <p>As a startup point you can also look at the helm section in Emacs menu to
 discover some of the commands provided by helm.</p>
@@ -127,7 +135,20 @@ discover some of the commands provided by helm.</p>
 <h3>
 <a name="advanced-usage" class="anchor" href="#advanced-usage"><span class="octicon octicon-link"></span></a>Advanced usage</h3>
 
-<p>Helm is capable of a lot.</p>
+<p>Helm is capable of a lot. Here is a demo of <code>helm-buffers-list</code>:</p>
+
+<p><img src="https://github.com/emacs-helm/helm/blob/master/doc/helm-buffers-list.gif" alt="helm-buffers-list"></p>
+
+<p>The demo starts when you see <code>Eval: START</code> in the minibuffer.</p>
+
+<ul>
+<li>All the C buffers are selected using the regexp <code>*C</code>. In the demo, I also select Tcl buffers with <code>*Tcl</code> and then switched back to C buffers with <code>*C</code>.</li>
+<li>I only want to have buffers that contains only the string "crash". To do that, I add a space, then add the pattern <code>@crash</code>.</li>
+<li>After the initial search pattern, I hand over the current matching buffers to <code>helm-moccur</code> - <code>moccur</code> with Helm interface. </li>
+<li>Candidates can be filtered gradually by adding more pattern, i.e. I added <code>memory</code> to filtered down to buffers that contain the string "memory" among the buffers that are containing "crash".</li>
+</ul><p>As you can see, as you filtered out, the number of candidates decreases, as displayed in the modeline. At the end, there were 12 buffers remained as the result of filtering, down from the total 253 buffers.</p>
+
+<p>You can read <a href="http://tuhdo.github.io/helm-intro.html">this guide</a> to quickly get started with Helm.</p>
 
 <p>You can find all the gory details on the <a href="https://github.com/emacs-helm/helm/wiki">Helm Wiki</a>.</p>
 
@@ -162,15 +183,28 @@ on <a href="https://groups.google.com/group/emacs-helm?hl=en">emacs-helm google 
 
 <p>Cheers,<br>
 The Helm Team</p>
-
-
-
-<p><a title="Use OpenDNS to make your Internet faster, safer, and smarter." href="http://www.opendns.com/share/"><img src="http://images.opendns.com/buttons/use_opendns_155x52.gif" width="155" height="52" alt="Use OpenDNS"></a></p>
-
-
       </section>
     </div>
 
-    
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Helm maintained by <a href="https://github.com/emacs-helm">emacs-helm</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-54420623-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
+
   </body>
 </html>
