Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ discover some of the commands provided by helm.</p>
 
 <p>Helm is capable of a lot. Here is a demo of <code>helm-buffers-list</code>:</p>
 
-<p><img src="https://github.com/emacs-helm/helm/blob/master/doc/helm-buffers-list.gif" alt="helm-buffers-list"></p>
+<p><img src="images/helm-buffers-list.gif" alt="helm-buffers-list"></p>
 
 <p>The demo starts when you see <code>Eval: START</code> in the minibuffer.</p>
 
