--- a/index.html
+++ b/index.html
@@ -56,11 +56,16 @@ the trap of backward compatibility. </p>
 
 <p>You need a recent Emacs to use latest helm, at least Emacs-24.3.</p>
 
+<p><a href="https://github.com/jwiegley/emacs-async">async</a> will be installed as dependency
+when installing from melpa but is facultative when installing from git (recommended though
+as it may fix installation of all packages from (m)elpa and will allow you to
+copy/rename asynchronously your files from helm and/or dired if needed).</p>
+
 <h2>
 <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started</h2>
 
 <h3>
-<a name="quick-install" class="anchor" href="#quick-install"><span class="octicon octicon-link"></span></a>Quick install</h3>
+<a name="quick-install-from-git" class="anchor" href="#quick-install-from-git"><span class="octicon octicon-link"></span></a>Quick install from git</h3>
 
 <ol>
 <li>
@@ -69,33 +74,53 @@ the trap of backward compatibility. </p>
 <div class="highlight highlight-elisp"><pre><span class="nv">$</span> <span class="nv">git</span> <span class="nv">clone</span> <span class="nv">https://github.com/emacs-helm/helm.git</span> <span class="nv">/path/to/helm/directory</span>
 </pre></div>
 </li>
-<li><p>Run <code>make</code> from this directory.</p></li>
+<li>
+<p>Clone the <code>async</code> repository to some directory (facultative)</p>
+
+<div class="highlight highlight-elisp"><pre><span class="nv">$</span> <span class="nv">git</span> <span class="nv">clone</span> <span class="nv">git@github.com:jwiegley/emacs-async.git</span> <span class="nv">/path/to/async/directory</span>
+</pre></div>
+</li>
+<li><p>Run <code>make</code> from the <code>helm</code> directory.</p></li>
 <li>
 <p>Add to <code>.emacs.el</code> (or equivalent):</p>
 
-<div class="highlight highlight-elisp"><pre><span class="p">(</span><span class="nv">add-to-list</span> <span class="ss">'load-path</span> <span class="s">"/path/to/helm/directory"</span><span class="p">)</span>
+<div class="highlight highlight-elisp"><pre><span class="c1">;; [Facultative] Only if you have installed async.</span>
+<span class="p">(</span><span class="nv">add-to-list</span> <span class="ss">'load-path</span> <span class="s">"/path/to/async/directory"</span><span class="p">)</span>
+
+<span class="p">(</span><span class="nv">add-to-list</span> <span class="ss">'load-path</span> <span class="s">"/path/to/helm/directory"</span><span class="p">)</span>
 <span class="p">(</span><span class="nb">require</span> <span class="ss">'helm-config</span><span class="p">)</span>
 </pre></div>
-
-<p><em>NOTE:</em> Installing helm like this (i.e from git+make) is the safest way.</p>
 </li>
-</ol><p>Alternatively, you can have a quick try to helm by launching from the helm directory:</p>
+</ol><p><em>NOTE:</em> Installing helm like this (i.e from git+make) is the safest way.</p>
+
+<p>You can have a quick try to <code>helm</code> by launching from the helm directory:</p>
 
 <p><code>./emacs-helm.sh</code></p>
 
-<p>Note that this will not work on Windows systems.</p>
+<p>It is also recommended to use this when reporting bug.</p>
+
+<p><em>NOTE:</em> That this will not work on Windows systems.</p>
 
 <h3>
 <a name="install-from-emacs-packaging-system" class="anchor" href="#install-from-emacs-packaging-system"><span class="octicon octicon-link"></span></a>Install from Emacs packaging system</h3>
 
 <p>Helm is now available on Melpa at <code>http://melpa.milkbox.net/</code>
-You will find there instructions to install.</p>
+You will find there instructions to install.
+Then you should need only in your init file:</p>
+
+<div class="highlight highlight-elisp"><pre><span class="p">(</span><span class="nb">require</span> <span class="ss">'helm-config</span><span class="p">)</span>
+</pre></div>
 
 <p><em>WARNING:</em> Due to a bad concept of package.el which is in charge of fetching helm files
-and compiling them, expect errors most of the time when upgrading from melpa and <code>list-package</code>.
-To avoid this you will have to compile your new files outside of your current emacs running helm.
-People installing from git and using make file will not suffer from this problem.
+and compiling them, users had errors most of the time when upgrading from melpa and <code>list-package</code>.
+To avoid this <a href="https://github.com/jwiegley/emacs-async">Async</a> have been added as dependency to
+helm to force package.el compiling its files in a clean environment.
+People installing from git and using the make file will not suffer from this problem and don't need
+<a href="https://github.com/jwiegley/emacs-async">Async</a> though it is recommended as it fix installation
+of all other packages you may install with package.el from (m)elpa.
 See <a href="https://github.com/emacs-helm/helm/wiki#faq">FAQ</a> for more infos.</p>
+
+<p><em>Note:</em> After upgrading from the emacs packaging system you should restart emacs for the changes take effect.</p>
 
 <p><strong>Note to Linux Distributions Maintainers</strong></p>
 
@@ -173,7 +198,8 @@ development of Helm.</p>
 <a name="bugs--improvements" class="anchor" href="#bugs--improvements"><span class="octicon octicon-link"></span></a>Bugs &amp; Improvements</h2>
 
 <p>Bug reports and suggestions for improvements are always
-welcome. GitHub pull requests are even better! :-)</p>
+welcome, be sure though they are related to helm, many bugs are coming from emacs itself
+or other packages. GitHub pull requests are even better! :-)</p>
 
 <p>NOTE: When trying if something is working or not, be sure to start helm from <code>Emacs -Q</code> or even better
 Start it from your helm directory with <code>./emacs-helm.sh</code>.</p>
