Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@ on <a href="https://groups.google.com/group/emacs-helm?hl=en">emacs-helm google 
 
 <p>Cheers,<br>
 The Helm Team</p>
+
+
+
+<p><a href="http://www.opendns.com/" target="_blank"><img src="http://images.opendns.com/buttons/use_opendns_155x52.gif" alt="OpenDNS" title="Use OpenDNS to make your Internet faster, safer, and smarter." width="155" height="52" border="0" hspace="10" vspace="10" align="Middle"></a></p>
       </section>
     </div>
 
