Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <pre><code> _____                            _   _      _
+        <h1>
+<a id="emacs-helm-" class="anchor" href="#emacs-helm-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Emacs-helm <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=thierry.volpiatto@gmail.com&amp;lc=US&amp;currency_code=EUR&amp;bn=PP-DonationsBF:btn_donateCC_LG.gif:NonHosted"><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate"></a>
+</h1>
+
+<pre><code> _____                            _   _      _
 | ____|_ __ ___   __ _  ___ ___  | | | | ___| |_ __ ___
 |  _| | '_ ` _ \ / _` |/ __/ __| | |_| |/ _ \ | '_ ` _ \
 | |___| | | | | | (_| | (__\__ \ |  _  |  __/ | | | | | |
