--- a/index.html
+++ b/index.html
@@ -31,16 +31,13 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a id="emacs-helm-" class="anchor" href="#emacs-helm-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Emacs-helm <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=thierry.volpiatto@gmail.com&amp;lc=US&amp;currency_code=EUR&amp;bn=PP-DonationsBF:btn_donateCC_LG.gif:NonHosted"><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate"></a>
-</h1>
+        <p><a href="http://www.gnu.org/licenses/gpl-3.0.txt"><img src="https://img.shields.io/badge/license-GPL_3-green.svg" alt="License GPL 3"></a>
+<a href="https://www.gratipay.com/thierryvolpiatto/"><img src="http://img.shields.io/gratipay/thierryvolpiatto.svg" alt="Gratipay"></a></p>
 
-<pre><code> _____                            _   _      _
-| ____|_ __ ___   __ _  ___ ___  | | | | ___| |_ __ ___
-|  _| | '_ ` _ \ / _` |/ __/ __| | |_| |/ _ \ | '_ ` _ \
-| |___| | | | | | (_| | (__\__ \ |  _  |  __/ | | | | | |
-|_____|_| |_| |_|\__,_|\___|___/ |_| |_|\___|_|_| |_| |_|
-</code></pre>
+<h1>
+<a id="emacs-helm" class="anchor" href="#emacs-helm" aria-hidden="true"><span class="octicon octicon-link"></span></a>Emacs-helm</h1>
+
+<p>You can  <a href="https://gratipay.com/thierryvolpiatto"><img src="https://cdn.rawgit.com/gratipay/gratipay-badge/2.1.3/dist/gratipay.png" alt="Support via Gratipay"></a> or <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=thierry.volpiatto@gmail.com&amp;lc=US&amp;currency_code=EUR&amp;bn=PP-DonationsBF:btn_donateCC_LG.gif:NonHosted"><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate"></a> to help this project.</p>
 
 <h2>
 <a id="abstract" class="anchor" href="#abstract" aria-hidden="true"><span class="octicon octicon-link"></span></a>Abstract</h2>
@@ -107,8 +104,10 @@ copy/rename asynchronously your files from helm and/or dired if needed).</p>
 <h3>
 <a id="install-from-emacs-packaging-system" class="anchor" href="#install-from-emacs-packaging-system" aria-hidden="true"><span class="octicon octicon-link"></span></a>Install from Emacs packaging system</h3>
 
-<p>Helm is now available on Melpa at <code>http://melpa.milkbox.net/</code>
+<p>Helm is now available on Melpa at <a href="http://melpa.org/">http://melpa.org/</a>
 You will find there instructions to install.
+See also <a href="https://github.com/milkypostman/melpa#usage">https://github.com/milkypostman/melpa#usage</a> to startup correctly
+with the emacs packaging system.
 Then you should need only in your init file:</p>
 
 <div class="highlight highlight-elisp"><pre>(require 'helm-config)</pre></div>
@@ -208,6 +207,59 @@ infos.</p>
 
 <p>You can find all the gory details on the <a href="https://github.com/emacs-helm/helm/wiki">Helm Wiki</a>.</p>
 
+<h4>
+<a id="fuzzy-matching" class="anchor" href="#fuzzy-matching" aria-hidden="true"><span class="octicon octicon-link"></span></a>Fuzzy matching</h4>
+
+<p>Helm has a built-in fuzzy matcher that is activated for some commands. Fuzzy matching is disabled by default. Currently these commands supports fuzzy matching:</p>
+
+<ul>
+<li>
+<code>helm-recentf</code>: Enabled by setting <code>helm-recentf-fuzzy-match</code> to <code>t</code>.</li>
+<li>
+<code>helm-mini</code>: Enable by setting <code>helm-buffers-fuzzy-matching</code> and <code>helm-recentf-fuzzy-match</code> to <code>t</code>.</li>
+<li>
+<code>helm-buffers-list</code>: Enable by setting <code>helm-buffers-fuzzy-matching</code> to <code>t</code>.</li>
+<li>
+<code>helm-find-files</code>: Enabled by default.</li>
+<li>
+<code>helm-locate</code>: Enable by setting <code>helm-locate-fuzzy-match</code> to <code>t</code>.</li>
+<li>
+<code>helm-M-x</code>: Enabled by setting <code>helm-M-x-fuzzy-match</code> to <code>t</code>.</li>
+<li>
+<code>helm-semantic</code>: Enabled by setting <code>helm-semantic-fuzzy-match</code> to <code>t</code>.</li>
+<li>
+<code>helm-imenu</code>: Enabled by setting <code>helm-imenu-fuzzy-match</code> to <code>t</code>.</li>
+<li>
+<code>helm-apropos</code>: Enabled by setting <code>helm-apropos-fuzzy-match</code> to <code>t</code>.</li>
+<li>
+<code>helm-lisp-completion-at-point</code>: Enabled by setting <code>helm-lisp-fuzzy-completion</code> to <code>t</code>.</li>
+</ul>
+
+<p><strong>IMPORTANT</strong>: To make fuzzy-matching fast, you must not set <code>helm-candidate-number-limit</code> to high. It is recommended that you leave variable with its default value 100. The higher you set <code>helm-candidate-number-limit</code>, the slower fuzzy-matching.</p>
+
+<h4>
+<a id="autoresize" class="anchor" href="#autoresize" aria-hidden="true"><span class="octicon octicon-link"></span></a>Autoresize</h4>
+
+<p>Helm can now resize according to the number of candidates with <code>helm-autoresize-mode</code>:</p>
+
+<pre><code>(helm-autoresize-mode 1)
+</code></pre>
+
+<p>Here is a demo:</p>
+
+<p><img src="doc/helm-autoresize-mode.gif" alt="helm-buffers-list"></p>
+
+<p>You can customize the minimum and maximum height that Helm can resize with these two variable:</p>
+
+<ul>
+<li><code>helm-autoresize-max-height</code></li>
+<li><code>helm-autoresize-min-height</code></li>
+</ul>
+
+<p>By default, <code>helm-autoresize-max-height</code> is set to 40, which makes Helm candidate buffer has the maximum height of 40% of current frame height. Similarly, <code>helm-autoresize-min-height</code> specifies the minimum height that Helm candidate buffer cannot be smaller.</p>
+
+<p>If you don't want the Helm window to be resized, but a smaller Helm window, you can set <code>helm-autoresize-max-height</code> equal to <code>helm-autoresize-max-height</code>.</p>
+
 <h2>
 <a id="known-issues" class="anchor" href="#known-issues" aria-hidden="true"><span class="octicon octicon-link"></span></a>Known issues</h2>
 
@@ -247,7 +299,7 @@ The Helm Team</p>
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">Helm maintained by <a href="https://github.com/emacs-helm">emacs-helm</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
