--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <p><a href="http://www.gnu.org/licenses/gpl-3.0.txt"><img src="https://img.shields.io/badge/license-GPL_3-green.svg" alt="License GPL 3"></a>
+<a href="http://melpa.org/#/helm"><img src="http://melpa.org/packages/helm-badge.svg" alt="MELPA"></a>
+<a href="http://stable.melpa.org/#/helm"><img src="http://stable.melpa.org/packages/helm-badge.svg" alt="MELPA Stable"></a>
 <a href="https://www.gratipay.com/thierryvolpiatto/"><img src="http://img.shields.io/gratipay/thierryvolpiatto.svg" alt="Gratipay"></a></p>
 
 <h1>
