--- a/index.html
+++ b/index.html
@@ -137,15 +137,18 @@ and other hacks, not using <code>helm-config</code>.
 Expect failures and slowdown at startup unless you really know what you are doing when you do so.</p>
 
 <h3>
-<a id="emacs-prelude" class="anchor" href="#emacs-prelude" aria-hidden="true"><span class="octicon octicon-link"></span></a>Emacs Prelude</h3>
+<a id="configuration" class="anchor" href="#configuration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Configuration</h3>
 
-<p>If you're afraid to play with Emacs's configuration, but want to try
-out Helm - have NO FEAR. Have a look at
-<a href="https://github.com/bbatsov/prelude">Emacs Prelude</a> - it has
-Helm built-in and properly set-up.</p>
+<p>For a minimal helm configuration, run the startup script <code>./emacs-helm.sh</code>
+and look at the file <code>/tmp/helm-cfg.el</code>.</p>
 
-<p>For a minimal helm configuration, run <code>./emacs-helm.sh</code> and look at the file
-<code>/tmp/helm-cfg.el</code>.</p>
+<p>The full configuration I use (helm maintainer) can be found <a href="https://github.com/thierryvolpiatto/emacs-tv-config/blob/master/init-helm-thierry.el">here</a>.</p>
+
+<p>Don't hesitate also to visit all helm customizable variables with the customize interface.
+Enabling <code>helm-mode</code> will give you completion in the diverse customize commands.</p>
+
+<p>Also you will find some packages like <a href="https://github.com/bbatsov/prelude">Emacs Prelude</a> that
+have Helm built-in and properly set-up.</p>
 
 <h3>
 <a id="basic-usage" class="anchor" href="#basic-usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic usage</h3>
