--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 <h1>
 <a id="emacs-helm" class="anchor" href="#emacs-helm" aria-hidden="true"><span class="octicon octicon-link"></span></a>Emacs-helm</h1>
 
+<p><img src="https://avatars3.githubusercontent.com/u/1541688?v=3&amp;s=200" alt="Emacs-helm"></p>
+
 <p>You can  <a href="https://gratipay.com/thierryvolpiatto"><img src="https://cdn.rawgit.com/gratipay/gratipay-badge/2.1.3/dist/gratipay.png" alt="Support via Gratipay"></a> or <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=thierry.volpiatto@gmail.com&amp;lc=US&amp;currency_code=EUR&amp;bn=PP-DonationsBF:btn_donateCC_LG.gif:NonHosted"><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate"></a> to help this project.</p>
 
 <h2>
@@ -66,7 +68,7 @@ copy/rename asynchronously your files from helm and/or dired if needed).</p>
 <li>
 <p>Clone the <code>async</code> repository to some directory (facultative)</p>
 
-<div class="highlight highlight-elisp"><pre>$ git clone git@github.com:jwiegley/emacs-async.git /path/to/async/directory</pre></div>
+<div class="highlight highlight-elisp"><pre>$ git clone https://github.com/jwiegley/emacs-async.git /path/to/async/directory</pre></div>
 </li>
 <li><p>Run <code>make</code> from the <code>helm</code> directory.</p></li>
 <li>
